[package]
name = "cranelift-tools"
authors = ["The Cranelift Project Developers"]
version = "0.56.0"
description = "Binaries for testing the Cranelift libraries"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
repository = "https://github.com/bytecodealliance/cranelift"
publish = false
edition = "2018"

# Present here only to make sure that cargo test --all runs tests for all
# the crates.
[workspace]

[[bin]]
name = "clif-util"
path = "src/clif-util.rs"

[dependencies]
cfg-if = "0.1"
cranelift-codegen = { path = "crates/codegen", version = "0.56.0" }
cranelift-entity = { path = "crates/entity", version = "0.56.0" }
cranelift-reader = { path = "crates/reader", version = "0.56.0" }
cranelift-frontend = { path = "crates/frontend", version = "0.56.0" }
cranelift-serde = { path = "crates/serde", version = "0.56.0", optional = true }
cranelift-wasm = { path = "crates/wasm", version = "0.56.0", optional = true }
cranelift-native = { path = "crates/native", version = "0.56.0" }
cranelift-filetests = { path = "crates/filetests", version = "0.56.0" }
cranelift-module = { path = "crates/module", version = "0.56.0" }
cranelift-faerie = { path = "crates/faerie", version = "0.56.0" }
cranelift-object = { path = "crates/object", version = "0.56.0" }
cranelift-simplejit = { path = "crates/simplejit", version = "0.56.0" }
cranelift-preopt = { path = "crates/preopt", version = "0.56.0" }
cranelift = { path = "crates/umbrella", version = "0.56.0" }
filecheck = "0.4.0"
clap = "2.32.0"
serde = "1.0.8"
term = "0.6.1"
capstone = { version = "0.6.0", optional = true }
wat = { version = "1.0.7", optional = true }
target-lexicon = "0.10"
pretty_env_logger = "0.3.0"
file-per-thread-logger = "0.1.2"
indicatif = "0.13.0"
walkdir = "2.2"

[features]
default = ["disas", "wasm", "cranelift-codegen/all-arch", "basic-blocks"]
disas = ["capstone"]
wasm = ["wat", "cranelift-wasm"]
basic-blocks = ["cranelift-codegen/basic-blocks", "cranelift-frontend/basic-blocks",
"cranelift-wasm/basic-blocks", "cranelift-filetests/basic-blocks"]

# We want debug symbols on release binaries by default since it allows profiling
# tools to give more accurate information. We can always strip them out later if
# necessary.
[profile.release]
debug = true
# debug-assertions = true # uncomment to make bugpoint blazingly fast!
[profile.bench]
debug = true
