[package]
name = "cranelift-interpreter"
version = "0.1.0"
authors = ["Andrew Brown"]
description = "Interpret Cranelift IR"
repository = "https://github.com/CraneStation/cranelift"
documentation = "https://cranelift.readthedocs.io/"
categories = ["no-std"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "*", default-features = false }
cranelift-entity = { path = "../cranelift-entity", version = "*" }
cranelift-reader = { path = "../cranelift-reader", version = "*" }
hashbrown = { version = "0.6", optional = true }
log = { version = "0.4.6", default-features = false }
thiserror = "1.0.4"
walkdir = "2.2"
pretty_env_logger = "0.3.1"

[dev-dependencies]
cranelift-frontend = { path = "../cranelift-frontend", version = "*" }

[features]
default = ["std"]
std = ["cranelift-codegen/std"]
core = ["hashbrown", "cranelift-codegen/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
