[package]
name = "cranelift-serde"
version = "0.45.0"
authors = ["The Cranelift Project Developers"]
description = "Serializer/Deserializer for Cranelift IR"
repository = "https://github.com/CraneStation/cranelift"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
keywords = ["webassembly", "serde"]
edition = "2018"

[[bin]]
name = "clif-json"
path = "src/clif-json.rs"

[dependencies]
clap = "2.33.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
cranelift-codegen = { path = "../cranelift-codegen", version = "0.45.0" }
cranelift-reader = { path = "../cranelift-reader", version = "0.45.0" }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
