[package]
name = "cton-wasm-fuzz"
version = "0.0.1"
authors = ["foote@fastly.com"]
publish = false

[package.metadata]
cargo-fuzz = true

# TODO: Temporarily using a modified binaryen-rs
[dependencies.binaryen]
version = "*"
path = "../lib/binaryen-rs"

[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[dependencies.cretonne-wasm]
path = "../lib/wasm"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_translate_module"
path = "fuzz_translate_module.rs"
