[package]
name = "cton-wasm-fuzz"
version = "0.0.1"
authors = ["foote@fastly.com"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.cargo-fuzz]
version = "*"

# Temporarily use fork until https://github.com/pepyakin/binaryen-rs/pull/4 is merged
[dependencies.binaryen]
version = "*"
git = "https://github.com/jfoote/binaryen-rs"
branch = "foote/wasm-mvp-fuzz"

[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[dependencies.cretonne-wasm]
path = "../lib/wasm"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_translate_module"
path = "fuzz_translate_module.rs"
