[package]
authors = ["The Cretonne Project Developers"]
name = "cretonne"
version = "0.0.0"
description = "Low-level code generator library"
license = "Apache-2.0"
documentation = "https://cretonne.readthedocs.io/"
repository = "https://github.com/stoklund/cretonne"
publish = false
build = "build.rs"

[features]
# cretonne supports `no_std`
# Using `std` is default, however
default = ["std"]
# workaround cargo not letting you conditionally *not* include dependencies
std = ["hashmap_core/disable"]

[lib]
name = "cretonne"

[dependencies]
# It is a goal of the cretonne crate to have minimal external dependencies.
# Please don't add any unless they are essential to the task of creating binary
# machine code. Integration tests that need external dependencies can be
# accomodated in `tests`.

[dependencies.hashmap_core]
version = "0.1.1"
