[package]
name = "cretonne-module"
version = "0.4.4"
authors = ["The Cretonne Project Developers"]
description = "Support for linking functions and data with Cretonne"
repository = "https://github.com/Cretonne/cretonne"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "cton_module"

[dependencies]
cretonne = { path = "../cretonne", version = "0.4.2" }
cretonne-entity = { path = "../entity", version = "0.4.2" }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "Cretonne/cretonne" }
