[package]
name = "cretonne-native"
version = "0.1.0"
authors = ["The Cretonne Project Developers"]
description = "Support for targetting the host with Cretonne"
repository = "https://github.com/stoklund/cretonne"
license = "Apache-2.0"

[lib]
name = "cton_native"

[dependencies]
cretonne = { path = "../cretonne", version = "0.1.0" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "3.0.0"
