[package]
authors = ["The Cretonne Project Developers"]
name = "cretonne-reader"
version = "0.0.0"
description = "Cretonne textual IL reader"
license = "Apache-2.0"
documentation = "https://cretonne.readthedocs.io/"
repository = "https://github.com/stoklund/cretonne"
publish = false

[features]
default = ["std"]
std = ["cretonne/std", "hashmap_core/disable"]

[lib]
name = "cton_reader"

[dependencies.cretonne]
path = "../cretonne"
default-features = false

[dependencies.hashmap_core]
version = "0.1.1"
