[package]
name = "cretonne-simplejit"
version = "0.4.2"
authors = ["The Cretonne Project Developers"]
description = "A simple JIT library backed by Cretonne"
repository = "https://github.com/Cretonne/cretonne"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "cton_simplejit"

[dependencies]
cretonne = { path = "../cretonne", version = "0.4.2" }
cretonne-module = { path = "../module", version = "0.4.2" }
cretonne-native = { path = "../native", version = "0.4.2" }
region = "0.2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "Cretonne/cretonne" }
